--- a/index.html
+++ b/index.html
@@ -29,29 +29,29 @@
 
     </header>
 
-    <figure class="hero" alt="Digital Marketing Meeting"></figure>
+    <figure class="hero" alt="Image of 4 people around a table in a meeting"></figure>
 
     <main class="content">
-        <!-- unnecessary identifiers removed and added alt attributes -->
+        <!-- added alt attributes -->
         <!-- class float-left and float-right modified and added identifier float-->
-        <section class="contents">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization" class="float" />
+        <section id="search-engine-optimization" class="contents">
+            <img src="./assets/images/search-engine-optimization.jpg" alt="Image of table top with a laptop, coffee, some pens and a book" class="float" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
 
-        <section class="contents">
-            <img src="./assets/images/online-reputation-management.jpg" alt="Online Reputation Management" id="float" />
+        <section id="online-reputation-management" class="contents">
+            <img src="./assets/images/online-reputation-management.jpg" alt="Image of a person on latop with reputation heading in the screen and a bar graph and holding mobile." id="float" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
 
-        <section class="contents">
-            <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing" class="float" />
+        <section id="social-media-marketing" class="contents">
+            <img src="./assets/images/social-media-marketing.jpg" alt="Top down image a table with a few people sitting around and sharing ideas" class="float" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -64,7 +64,7 @@
 
         <section class="benefit">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="Lead Generation" />
+            <img src="./assets/images/lead-generation.png" alt="Black and white image of a gear kind of wheel going through a funnel and dollar sign on the other end" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -72,7 +72,7 @@
 
         <section class="benefit">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness" />
+            <img src="./assets/images/brand-awareness.png" alt="Black and white image of a persons body with tie and head is replaced by light bulb with waves around it" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -80,7 +80,7 @@
 
         <section class="benefit">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="Cost Management" />
+            <img src="./assets/images/cost-management.png" alt="Black and white image 3 dollar signs inside circles with a gear hidden behind them" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
